@@ -37,7 +37,7 @@ public class ExcludePrivateAnnotationsStandardDoclet {
   
   public static boolean start(RootDoc root) {
     System.out.println(
-	ExcludePrivateAnnotationsStandardDoclet.class.getSimpleName());
+        ExcludePrivateAnnotationsStandardDoclet.class.getSimpleName());
     return Standard.start(RootDocProcessor.process(root));
   }
   
